이미지 가주세요

--- a/wineshare/src/main/resources/templates/wine/wineDetail.html
+++ b/wineshare/src/main/resources/templates/wine/wineDetail.html
@@ -51,7 +51,7 @@
 
       const url = "/cellars";
       const paramData = {
-        itemId: $('#wineId').val()
+        wineId: $('#wineId').val()
       };
       const param = JSON.stringify(paramData);
 
