--- a/wineshare/src/main/resources/templates/board/boardForm.html
+++ b/wineshare/src/main/resources/templates/board/boardForm.html
@@ -4,66 +4,157 @@
       layout:decorate="~{layouts/layout1}">
 
 <th:block layout:fragment="css">
-  <!-- write css Fiels -->
-  <link rel="stylesheet" type="text/css" th:href="@{/stylesheets/write.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/board-form.css}">
+
+    <style>
+        .fieldError{
+            color: #bd2130;
+        }
+    </style>
 </th:block>
 
 <th:block layout:fragment="script">
-  <script th:inline="javascript">
+    <script th:inline="javascript">
+        // const boardStatus = $('#hidden-boardStatus').val();
 
-
-  </script>
+    </script>
 </th:block>
 
 
-<!--<div id="loading-overlay">-->
-<!--  <div class="loader"></div>-->
-<!--</div> &lt;!&ndash; /.loading-overlay &ndash;&gt; 로딩페이지-->
+
 
 <div layout:fragment="content">
-<div class="main-homepage-1">
+    <div class="board-form">
+        <form role="form" method="post" th:object="${boardDTO}" enctype="multipart/form-data">
+            <input type="hidden" th:field="*{id}">
 
-</div> <!-- /homepage1 -->
-<div class="board_wrap">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="panel panel-default">
 
-  <div class="board_title">
-    <strong>자유게시판</strong>
-    <p>자유롭게 의견을 나눠보세요!!</p>
-  </div>
+                        <div th:text="${boardStatus} + ' Board Register'" class="form-title">
+                            Board Register
+                        </div>
 
-  <div class="board_write_wrap">
-<!--    <form th:action="@{/}" method="post" class="board_write">-->
-      <div class="title">
-        <dl>
-          <dt>제목</dt>
-          <dd><input type="text" name="title" placeholder="제목입력" value="" required></dd>
-        </dl>
-      </div>
-      <div class="info">
-        <dl>
-          <dt>글쓴이</dt>
-          <dd><input type="text" name="writer" placeholder="글쓴이 입력" value="" required></dd>
-        </dl>
-        <dl>
-          <dt>비밀번호</dt>
-          <dd><input type="password" name="password" placeholder="비밀번호 입력" required></dd>
-        </dl>
-      </div>
 
-      <div class="cont">
-        <textarea name="content" placeholder="내용입력해주세요" text="" required></textarea>
-      </div>
+                        <div class="form-body">
+                            <div class="row">
+                                <div class="col-lg-12">
 
-      <div class="bt_wrap">
-        <button type="submit" class="on">등록</button>
-        <a href="#" class="bt_cancel">취소</a>
-      </div>
-<!--    </form>-->
-  </div>
+                                    <div class="form-group">
+<!--                                        <div th:if="${#strings.isEmpty(boardDTO.id)}">-->
+<!--                                            <label th:for="boardStatus"></label>-->
+<!--                                            <input type="text" class="form-control" id="boardStatus" name="boardStatus" th:value="${boardStatus}" readonly>-->
+<!--                                        </div>-->
 
-</div>
+<!--                                        <div th:unless="${#strings.isEmpty(boardDTO.id)}">-->
+<!--                                        <label th:for="boardStatus"></label>-->
+<!--                                        <input type="text" class="form-control" th:field="*{boardStatus}" readonly>-->
+<!--                                        </div>-->
 
-<a id="scroll-top"><i class="fa fa-angle-right" aria-hidden="true"></i></a> <!-- /#scroll-top -->
+                                        <div th:if="${boardDTO.id == null}">
+                                            <label th:for="boardStatus"></label>
+                                            <input type="text" class="form-control" id="boardStatus" name="boardStatus" th:value="${boardStatus}" readonly>
+                                        </div>
+
+                                        <div th:unless="${boardDTO.id == null}">
+                                            <label th:for="boardStatus"></label>
+                                            <input type="text" class="form-control" th:field="*{boardStatus}" readonly>
+                                        </div>
+
+                                    </div>
+
+                                    <div class="form-group">
+
+                                        <label th:for="boardTitle">제목</label>
+                                        <input type="text" class="form-control" th:field="*{boardTitle}" placeholder="제목을 입력해주세요.">
+<!--                                        <p th:if="${#fields.hasErrors('boardTitle')}" th:errors="*{boardTitle}" class="fieldError" th:readonly="${!isAuthor}">Incorrect data</p>-->
+
+                                    </div>
+
+                                    <div th:if="${#strings.toLowerCase(boardStatus) == 'upgrade' || #strings.toLowerCase(boardStatus) == 'request'}">
+                                    <div class="form-group">
+                                        <div class="custom-file">
+                                        <label th:for="boardImgFile" class="custom-file-label">사진 첨부</label>
+                                        <input type="file" class="custom-file-input" th:field="*{boardImgFile}">
+                                        </div>
+                                    </div>
+                                    </div>
+
+                                    <div th:unless="${#strings.toLowerCase(boardStatus) == 'upgrade' || #strings.toLowerCase(boardStatus) == 'request'}">
+<!--                                    일단 사진없으면?    -->
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label th:for="boardContent">내용</label>
+                                        <textarea  th:field="*{boardContent}" cols="95%" rows="5" class="form-control" ></textarea>
+<!--                                        <p th:if="${#fields.hasErrors('boardContent')}" th:errors="*{boardContent}" class="fieldError">Incorrect data</p>-->
+                                    </div>
+
+<!--                                    <div th:if="${#strings.isEmpty(boardDTO.id)}">-->
+                                    <div th:if="${boardDTO.id==null}">
+<!--                                        <div class="form-group">-->
+<!--                                            <label th:for="writerNickname">작성자</label>-->
+<!--                                            <input type="text" class="form-control" th:field="*{writerNickname}" placeholder="작성자를 입력해주세요.">-->
+<!--                                            <p class="fieldError" th:if="${#fields.hasErrors('writerNickname')}" th:errors="*{writerNickname}">Incorrect data</p>-->
+<!--                                        </div>-->
+
+                                        <div class="reg-button">
+                                            <!--    th:formaction 경로 수정해야합니덥!!!     -->
+                                            <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/new'}"
+                                                    type="submit" class="btn text-white" style="background-color: #c02323;">등록</button>
+                                            <button type="reset" class="btn text-white" style="background-color: #BDBDBD;">취소</button>
+                                        </div>
+
+                                    </div>
+
+                                    <div th:unless="${boardDTO.id ==null}">
+                                        <div class="form-group">
+                                            <label th:for="writerNickname">작성자</label>
+                                            <input type="text" class="form-control" th:field="*{writerNickname}" placeholder="작성자를 입력해주세요." readonly>
+<!--                                            <p class="fieldError" th:if="${#fields.hasErrors('writerNickname')}" th:errors="*{writerNickname}">Incorrect data</p>-->
+                                        </div>
+
+<!--                                        <div th:if="${isAuthor}">-->
+                                        <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/modify/' + ${boardDTO.id}}" class="btn text-white" style="background-color: #c02323;" type="submit">수정</button>
+                                        <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/remove/' + ${boardDTO.id}}" class="btn text-white" style="background-color: #E1B848;" type="submit">삭제</button>
+                                        <button type="reset" class="btn text-white" style="background-color: #BDBDBD;">취소</button>
+<!--                                        </div>-->
+
+                                        <div th:unless="${isAuthor}">
+
+                                        </div>
+
+                                    </div>
+
+<!--                                    <div th:if="${#strings.isEmpty(boardDTO.id)}">-->
+<!--                                        <div class="reg-button">-->
+<!--                                            &lt;!&ndash;    th:formaction 경로 수정해야합니덥!!!     &ndash;&gt;-->
+<!--                                            <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/new'}"-->
+<!--                                                    type="submit" class="btn text-white" style="background-color: #c02323;">등록</button>-->
+<!--                                            <button type="reset" class="btn text-white" style="background-color: #BDBDBD;">취소</button>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+
+<!--                                    <div th:unless="${#strings.isEmpty(boardDTO.id)}">-->
+<!--                                        &lt;!&ndash;    th:formaction 경로 수정해야합니덥!!!     &ndash;&gt;-->
+<!--                                        <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/modify/' + ${boardDTO.id}}" class="btn text-white" style="background-color: #c02323;" type="submit">수정</button>-->
+<!--                                        <button th:formaction="@{'/boards/' + ${#strings.toLowerCase(boardStatus)} + '/remove/' + ${boardDTO.id}}" class="btn text-white" style="background-color: #E1B848;" type="submit">삭제</button>-->
+<!--                                        <button type="reset" class="btn text-white" style="background-color: #BDBDBD;">취소</button>-->
+<!--                                    </div>-->
+
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+        </form>
+    </div>
+
+
 </div>
 
 </html>
