--- a/wineshare/src/main/resources/templates/cellar/cellarList.html
+++ b/wineshare/src/main/resources/templates/cellar/cellarList.html
@@ -26,17 +26,55 @@
             <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">Product</a></li>
-              <li class="blog"><a href="#">Shop Full Width</a></li>
+              <li class="blog"><a href="#">Wish List</a></li>
             </ul>
           </div>
           <div class="page-title-heading">
-            <h2 class="title"><a href="#">ARCHIVES PRODUCTS</a></h2>
+            <h2 class="title"><a href="#">Wish List</a></h2>
           </div>
         </div>
       </div>
     </div> <!-- /.page-title -->
 
 
+  <div class="main-wish-list">
+    <section class="flat-cart">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="woocommerce-tabs wc-tabs-wrapper">
+              <div id="tab-description" class="tab-content">
+                <table class="table table-bordered">
+                  <thead>
+                  <tr>
+                    <th class="image">Image</th>
+                    <th class="product">Wine Name</th>
+                    <th class="type">Type</th>
+                    <th class="delete">×</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr th:each="cellarWine : ${cellarWines}">
+                    <td class="text-center image"><img th:src="${cellarWine.wineImg}" th:alt="${cellarWine.cellarWineId}"></td>
+                    <td class="list text" th:text="${cellarWine.cellarWineId}"></td>
+                    <td class="text-center list price" th:text="${cellarWine.wineType}"></td>
+                    <td class="text-center delete">
+                      <button class="close" type="button" aria-label="Close">
+                                        <span aria-hidden="true" th:data-id="${cellarwine.cellarWineId}"
+                                              onclick="deleteCellarWine(this)">x</span>
+                      </button>
+                    </td>
+                  </tr>
+
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div> <!-- /main-order-tracking -->
 
 
 
