--- a/wineshare/src/main/resources/templates/fragments/header.html
+++ b/wineshare/src/main/resources/templates/fragments/header.html
@@ -103,10 +103,10 @@
                 <li sec:authorize="isAuthenticated()">
                   <a href="/members/logout">Logout</a>
                 </li>
-                <li><a href="projects1.html" title="">My Account</a></li>
-                <li><a href="projects1.html" title="">My Wishlist</a></li>
-                <li><a href="projects1.html" title="">My Cart</a></li>
-                <li><a href="projects1.html" title="">Tracking Orders</a></li>
+                <li><a href="/cellar/cellarList" title="">My Cellar</a></li>
+                <li><a href="/wines/new" title="">와인 등록</a></li>
+                <li><a href="/marketings/bistro/new" title="">업장/행사 등록</a></li>
+                <li><a href="#" title="">관리자 데이터 목록</a></li>
               </ul><!-- /.sub-menu -->
             </li>
           </ul>
