--- a/wineshare/src/main/resources/templates/marketing/marketingForm.html
+++ b/wineshare/src/main/resources/templates/marketing/marketingForm.html
@@ -48,8 +48,27 @@
 
 <div layout:fragment="content">
 
+    <!-- 각 페이지 상단에 경로 나타내주는 부분.. -->
+    <div class="page-title parallax parallax1">
+        <div class="container">
+            <div class="page-title-content d-sm-flex justify-content-sm-between align-items-center text-center">
+                <div class="breadcrumbs">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Product</a></li>
+                        <li class="blog"><a href="#">Marketing & Event</a></li>
+                    </ul>
+                </div>
+                <div class="page-title-heading">
+                    <h2 class="title"><a href="#">Marketing & Event</a></h2>
+                </div>
+            </div>
+        </div>
+    </div> <!-- /.page-title -->
+
+
     <div class="marketing-form">
-        <h1 class="marketing-form-title">Marketing Form</h1>
+        <h1 class="marketing-form-title">Marketing & Event</h1>
 
         <!-- 타임리프를 사용한 와인 등록 폼 -->
         <form th:action="@{/templates/marketing}" method="post" class="marketingForm" th:object="${marketingDTO}" enctype="multipart/form-data">
