--- a/wineshare/src/main/resources/templates/marketing/marketingList.html
+++ b/wineshare/src/main/resources/templates/marketing/marketingList.html
@@ -3,10 +3,11 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
+<!-- css -->
  <th:block layout:fragment="css">
-  <!-- markeing 페이지 css -->
-  <link rel="stylesheet" type="text/css" th:href="@{/stylesheets/marketing.css}">
+   <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/marketing-list.css}">
  </th:block>
+
 
  <th:block layout:fragment="script">
    <script th:inline="javascript">
@@ -16,146 +17,202 @@
 
 
 <div layout:fragment="content">
-<!-- 상단에 이미지랑 이미지안에 텍스트넣기 -->
-<div style="position: relative; width: 100vw; height: 30vh;">
-  <img th:src="@{main/image/Ah.jpg}" alt="" style="width:100%; height:100%; object-fit: cover;">
-  <h1 style="position: absolute; bottom: 0; left: 0; margin: 10px; color: white; font-size: 2rem;">프로모션</h1>
-</div>
-<!-- 검색기능 서치바 -->
-<div class="search-container">
-  <form action="/search" method="GET">
-    <input type="text" placeholder="검색어를 입력하세요..." name="search">
-    <button type="submit">검색</button>
+
+<!-- 현재 컨트롤러 주석단거때문에 /marketings/bistro/list 경로로 들어가면 되는데 th 잘못넣어서 아무것도 뜨지 않음...  -->
+  <form th:action="@{/marketing/marketingList/}" role="form" method="get" th:object="${MarketingDTO}">
+
+  <!-- 검색 & 정렬 기능 -->
+  <div class="search-sort">
+      <div class="marketing-search">
+          <input type="search" id="search" placeholder="Search..." >
+      </div>
+
+      <div class="marketing-sort">
+        <h5>Sort by</h5>
+        <select th:field="*{marketing.marketCategory}">
+          <option value="WINEBAR">WINE BAR</option>
+          <option value="BOTTLESHOP">BOTTLE SHOP</option>
+          <option value="BISTRO">BISTRO</option>
+        </select>
+      </div>
+
+    </div>
+
+
+
+      <div class="main-blog-grid">
+        <div class="container clearfix">
+          <div class="col-left">
+            <article class="post">
+              <div class="featured-post">
+                <img th:src="@{/image/wines1.jpg}" th:alt="image">
+              </div>
+              <div class="content-post">
+                <div class="post-title" th:text="${marketing.marketingTitle}">
+                  <h2>업장 이름</h2>
+                </div>
+                <div class="post-content" th:text="${marketing.checkContent}">
+                  <span>행사 소개</span>
+                </div>
+                <div class="post-submit">
+                  <a th:href="${marketing.marketLink}"> READ MORE <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </article>
+
+
+            <!--   밑에는 그냥 자리 보려고 깡통만 만듬 . 위에 완성되면 지우기!!!!!!!!        -->
+
+
+            <article class="post">
+              <div class="featured-post">
+                <img th:src="@{image/wines3.jpg}" th:alt="image">
+              </div>
+              <div class="content-post">
+                <div class="post-title">
+                  <h2>Billecart-Salmon launche new Champagne</h2>
+                </div>
+                <div class="post-meta">
+                  <span>May 21, 2018 </span>
+                </div>
+                <div class="post-content">
+                  <span>Family-owned Champagne house Bille cart Salmon has launched...</span>
+                </div>
+                <div class="post-submit">
+                  <a href="#"> READ MORE <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </article>
+            <article class="post">
+              <div class="featured-post">
+                <img th:src="@{image/wines5.jpg}" th:alt="image">
+              </div>
+              <div class="content-post">
+                <div class="post-title">
+                  <h2>Ridgeview's latest vintage reveals brand</h2>
+                </div>
+                <div class="post-meta">
+                  <span>May 10, 2018</span>
+                </div>
+                <div class="post-content">
+                  <span>Family-owned Champagne house Bille cart Salmon has launched...</span>
+                </div>
+                <div class="post-submit">
+                  <a href="#"> READ MORE <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </article>
+            <article class="post">
+              <div class="featured-post">
+                <img th:src="@{image/wines7.jpg}" th:alt="image">
+              </div>
+              <div class="content-post">
+                <div class="post-title">
+                  <h2>The greatest Bordeaux vintages that never were</h2>
+                </div>
+                <div class="post-meta">
+                  <span>May 10, 2018</span>
+                </div>
+                <div class="post-content">
+                  <span>Family-owned Champagne house Bille cart Salmon has launched...</span>
+                </div>
+                <div class="post-submit">
+                  <a href="#"> READ MORE <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </article>
+          </div>
+          <div class="col-right">
+            <article class="post post-right">
+              <div class="featured-post">
+                <img th:src="@{image/wines2.jpg}" th:alt="image">
+              </div>
+              <div class="content-post">
+                <div class="post-title">
+                  <h2>Jefford on Monday: All change at Capion</h2>
+                </div>
+                <div class="post-meta">
+                  <span>May 19, 2018</span>
+                </div>
+                <div class="post-content">
+                  <span>Family-owned Champagne house Bille cart Salmon has launched...</span>
+                </div>
+                <div class="post-submit">
+                  <a href="#"> READ MORE <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </article>
+            <article class="post post-right">
+              <div class="featured-post">
+                <img th:src="@{image/wines4.jpg}" th:alt="image">
+              </div>
+              <div class="content-post">
+                <div class="post-title">
+                  <h2>Dom Pérignon cellarmaster Geoffroy</h2>
+                </div>
+                <div class="post-meta">
+                  <span>May 25, 2018</span>
+                </div>
+                <div class="post-content">
+                  <span>Family-owned Champagne house Bille cart Salmon has launched...</span>
+                </div>
+                <div class="post-submit">
+                  <a href="#"> READ MORE <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </article>
+            <article class="post post-right">
+              <div class="featured-post">
+                <img th:src="@{image/wines6.jpg}" th:alt="image">
+              </div>
+              <div class="content-post">
+                <div class="post-title">
+                  <h2>Barbaresco 2015: Latest raleases</h2>
+                </div>
+                <div class="post-meta">
+                  <span>May 10, 2018</span>
+                </div>
+                <div class="post-content">
+                  <span>Family-owned Champagne house Bille cart Salmon has launched...</span>
+                </div>
+                <div class="post-submit">
+                  <a href="#"> READ MORE <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </article>
+            <article class="post post-right">
+              <div class="featured-post">
+                <img th:src="@{image/wines8.jpg}" th:alt="image">
+              </div>
+              <div class="content-post">
+                <div class="post-title">
+                  <h2>Roero 2015 & Riserva 2014: Latest releases</h2>
+                </div>
+                <div class="post-meta">
+                  <span>May 10, 2018</span>
+                </div>
+                <div class="post-content">
+                  <span>Family-owned Champagne house Bille cart Salmon has launched...</span>
+                </div>
+                <div class="post-submit">
+                  <a href="#"> READ MORE <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </article>
+          </div>
+        </div> <!-- /container -->
+        <div class="blog-pagination">
+          <ul class="flat-pagination">
+            <li class="prev"><a href="#" class=" hvr-shutter-out-horizontal"> <i class="fa fa-angle-left" aria-hidden="true"></i> </a></li>
+            <li><a href="#" class=" hvr-shutter-out-horizontal"> 1 </a></li>
+            <li><a href="#" class=" hvr-shutter-out-horizontal"> 2 </a></li>
+            <li><a href="#" class=" hvr-shutter-out-horizontal"> 3 </a></li>
+            <li class="next"><a href="#" class=" hvr-shutter-out-horizontal"> <i class="fa fa-angle-right" aria-hidden="true"></i> </a></li>
+          </ul>
+        </div>
+      </div> <!-- /main-blog-grid -->
+
   </form>
-</div>
-<!-- 카드 반복되는곳 -->
-
-<div class="card-container">
-  <div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-      <div class="col-md-4">
-        <a href=""><img src="..." class="img-fluid rounded-start" alt="..."></a>
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">프로모션 내용</h5>
-          <p class="card-text">가게 설명 ~~~~~~</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-      <div class="col-md-4">
-        <a href=""><img src="..." class="img-fluid rounded-start" alt="..."></a>
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">프로모션 내용</h5>
-          <p class="card-text">가게설명~~~~~.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="card-container">
-  <div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-      <div class="col-md-4">
-        <a href=""><img src="..." class="img-fluid rounded-start" alt="..."></a>
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">프로모션 내용</h5>
-          <p class="card-text">가게설명.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-      <div class="col-md-4">
-        <a href=""><img src="..." class="img-fluid rounded-start" alt="..."></a>
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">프로모션 내용</h5>
-          <p class="card-text">가게설명.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="card-container">
-  <div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-      <div class="col-md-4">
-        <a href=""><img src="..." class="img-fluid rounded-start" alt="..."></a>
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">프로모션 내용</h5>
-          <p class="card-text">가게설명.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-      <div class="col-md-4">
-        <a href=""><img src="..." class="img-fluid rounded-start" alt="..."></a>
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">프로모션 내용</h5>
-          <p class="card-text">가게설명~~.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="card-container">
-  <div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-      <div class="col-md-4">
-        <a href=""><img src="..." class="img-fluid rounded-start" alt="..."></a>
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">프로모션 내용</h5>
-          <p class="card-text">가게설명~~.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-      <div class="col-md-4">
-        <a href=""><img src="..." class="img-fluid rounded-start" alt="..."></a>
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">프로모셔내용</h5>
-          <p class="card-text">가게설명~~~~.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-
-<!-- 셀렉트바 js -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
-<!-- 카드 반복 js  -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </div>
 
 </html>
