--- a/wineshare/src/main/resources/templates/member/memberForm.html
+++ b/wineshare/src/main/resources/templates/member/memberForm.html
@@ -5,7 +5,7 @@
 
 <!-- register css Fiels -->
 <th:block layout:fragment="css">
-<link rel="stylesheet" type="text/css" th:href="@{/stylesheets/register.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/login-form.css}">
     <style>
         .fieldError{
             color: #bd2130;
@@ -26,24 +26,30 @@
                 alert(errorMessage);
             }
         });
+
+        function maskSsn() {
+        const rrnSecondInput = document.getElementById("rrnSecond");
+        const inputLength = rrnSecondInput.value.length;
+
+        // 입력값을 *로 변환
+        if (inputLength > 0) {
+            rrnSecondInput.value = "*".repeat(inputLength);
+        }
+    }
     </script>
 </th:block>
 
 <div layout:fragment="content">
 
-    <div class="main-homepage-1">
 
-    </div> <!-- /homepage1 -->
-    <div id="container1"></div>
-
-    <div class="container">
+    <div class="account-container">
 
         <div th:if="${authority.equals('admin')}">
-        <h1 class="header">Create Admin Account</h1>
+        <h1 class="account-header">Create Admin Account</h1>
         </div>
 
         <div th:unless="${authority.equals('admin')}">
-            <h1 class="header">Create Account</h1>
+            <h1 class="account-header">Create Account</h1>
         </div>
 
 
@@ -54,44 +60,54 @@
 
             <!-- 이메일 입력 -->
             <div class="form-group">
-                <label th:for="email">Email</label>
+                <label th:for="email">이메일</label>
                 <input th:field="*{email}" type="email" placeholder="email" required/>
                 <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
             </div>
 
             <!-- 비밀번호 입력 -->
             <div class="form-group">
-                <label th:for="password">Password</label>
+                <label th:for="password">비밀번호</label>
                 <input th:field="*{password}" type="password" placeholder="password" required/>
                 <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
             </div>
 
             <!-- 이름 입력 -->
             <div class="form-group">
-                <label th:for="name">Name</label>
+                <label th:for="name">이름</label>
                 <input th:field="*{name}" type="text" placeholder="Enter your name" required/>
                 <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
             </div>
 
             <!-- 닉네임 입력 -->
             <div class="form-group">
-                <label th:for="nickname">Nickname</label>
+                <label th:for="nickname">닉네임</label>
                 <input th:field="*{nickname}" type="text" placeholder="Enter your nickname" required/>
                 <p th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" class="fieldError">Incorrect data</p>
             </div>
 
             <!-- 주민등록번호 입력 -->
             <div class="form-group">
-                <label th:for="RRN">RRN</label>
-                <input th:field="*{RRN}" type="text" placeholder="Enter your RRN" required/>
+                <label th:for="RRN">주민등록번호</label>
+                <div class="rrn-group">
+                <input th:field="*{RRN}" type="text" placeholder="6자리를 입력해주세요" maxlength="6" required/>
+                <span style="margin: 0 15px;">_</span>
+                <input id="rrnSecond" th:field="*{RRN}" type="text" placeholder="7자리를 입력해주세요" maxlength="7" required oninput="maskSsn()"/>
                 <p th:if="${#fields.hasErrors('RRN')}" th:errors="*{RRN}" class="fieldError">Incorrect data</p>
+                </div>
             </div>
 
             <!-- 전화번호 입력 -->
-            <div class="form-group">
-                <label th:for="phoneNumber">Phone Number</label>
-                <input th:field="*{phoneNumber}" type="text" placeholder="Enter your phone number" required/>
+            <div class="form-group-phone">
+                <label th:for="phoneNumber">전화번호</label>
+                <div class="phone-group">
+                <input th:field="*{phoneNumber}" type="text" placeholder="010" maxlength="3" required/>
+                <span style="margin: 0 7px;">_</span>
+                <input th:field="*{phoneNumber}" type="text" placeholder="0000" maxlength="4" required/>
+                <span style="margin: 0 7px;">_</span>
+                <input th:field="*{phoneNumber}" type="text" placeholder="0000" maxlength="4" required/>
                 <p th:if="${#fields.hasErrors('phoneNumber')}" th:errors="*{phoneNumber}" class="fieldError">Incorrect data</p>
+                </div>
             </div>
 
             <!-- 등록 버튼 -->
@@ -100,9 +116,9 @@
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
         </form>
 
-        <div class="footer-text">
+        <div class="login-footer">
             <!-- 로그인 페이지로 이동 -->
-            Already have an account? <a th:href="@{/members/login}">Sign In</a>
+            이미 가입된 회원이신가요? <a th:href="@{/members/login}">Log In</a>
         </div>
     </div>
 
