--- a/wineshare/src/main/resources/templates/member/memberLoginForm.html
+++ b/wineshare/src/main/resources/templates/member/memberLoginForm.html
@@ -3,9 +3,9 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
+<!-- 사용자 css -->
 <th:block layout:fragment="css">
-    <!-- login css Fiels -->
-    <link rel="stylesheet" type="text/css" th:href="@{/stylesheets/login.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/wineshare-css/login-form.css}">
 
     <style>
         .error{
@@ -14,24 +14,21 @@
     </style>
 </th:block>
 
+<!--/* 사용자 js 추가 */-->
 <th:block layout:fragment="script">
-    <script th:inline="javascript">
 
-    </script>
 </th:block>
+
 
 <div layout:fragment="content">
     <div id="loading-overlay">
         <div class="loader"></div>
     </div> <!-- /.loading-overlay -->
 
-
-    <div class="main-homepage-1">
-
-    </div> <!-- /homepage1 -->
-    <div class="container">
+    <div class="login-form-container">
         <!-- 로고 이미지 경로를 타임리프를 사용해 동적으로 설정 -->
-        <h1 class="header">Sign in</h1>
+        <h1 class="login-header">Log in</h1>
+
         <form action="/members/login" role="form" method="post" class="login-form">
             <div class="form-group">
                 <label for="email">이메일</label>
@@ -44,21 +41,19 @@
             <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}">Incorrect data</p>
             <div class="custom-checkbox">
                 <input type="checkbox" name="remember" id="remember"/>
-                <label for="remember">Keep me signed in</label>
+                <label for="remember">로그인 기억하기</label>
             </div>
 
             <button type="submit" class="login-button">Login</button>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
         </form>
 
-        <div class="footer-text">
+        <div class="login-footer">
             회원이 아니신가요? <a th:href="@{/members/new}">회원가입</a>
         </div>
 
 
     </div>
+
 </div>
-
-
-
 </html>
